# code-platform

./: .gitignore  Dockerfile  README.md  code-platform.conf  docker-compose.yml  pyproject.toml
code-platform/config/: __init__.py  redis.py  settings.py  urls.py
code-platform/problems/: managers.py  models.py  models_abstract.py  serializers.py  urls.py  views.py
code-platform/problems/migrations/: 0001_initial.py  0002_remove_submission_score_zero_or_hundred_and_more.py  0003_alter_problem_answer_alter_problem_commentary.py  0004_alter_solution_score_alter_submission_score.py  0005_alter_problem_name.py  0006_rename_category_category_name.py  0007_solution_state.py
config/: redis.py  settings.py  swagger.py  urls.py
problems/: admin.py  filters.py  models.py  models_abstract.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
problems/tests/: __init__.py  category_test.py  problem_test.py  test_models.py  test_problemapis.py  user_test.py
solutions/: admin.py  models.py
