[tool.poetry]
name = "code-platform"
version = "0.1.0"
description = "Numble Challenge"
authors = ["chestnut90 <cowzon90@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "code_platform"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.5"
celery = "^5.2.7"
django-redis = "^5.2.0"
django-debug-toolbar = "^4.0.0"
django-extensions = "^3.2.1"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
